Grant access of 605583 GEE assesst to public

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Support_func_1_Make_GEE_Asset_Public.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Support_func_1_Make_GEE_Asset_Public.ipynb
@@ -25,12 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ee\n",
     "import subprocess\n",
+    "from subprocess import PIPE\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -65,60 +66,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_folder = 'users/wensomone666/Jinzhu/Mean_NDVI'"
+    "path_folder = 'users/Jinzhu_Deakin/North_China_Plain'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "p = subprocess.run(f'earthengine ls {path_folder}',\n",
     "                   shell = True,\n",
-    "                   capture_output = True, \n",
-    "                   text = True ).stdout"
+    "                   stdout=PIPE, \n",
+    "                   stderr=PIPE,\n",
+    "                   universal_newlines=True).stdout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1987_1989_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1987_1989_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1990_1992_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1990_1992_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1993_1995_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1993_1995_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1996_1998_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1996_1998_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1999_2001_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1999_2001_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2002_2004_Mean_EVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2002_2004_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2002_2004_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2005_2007_Mean_EVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2005_2007_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2005_2007_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2008_2010_Mean_EVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2008_2010_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2008_2010_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2011_2013_Mean_EVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2011_2013_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2011_2013_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2014_2016_Mean_EVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2014_2016_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2014_2016_Mean_NDVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2017_2019_Mean_EVI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2017_2019_Mean_NDBI',\n",
-       " 'projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2017_2019_Mean_NDVI']"
+       "['projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3',\n",
+       " 'projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized',\n",
+       " 'projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Village_climate_zone_16_points',\n",
+       " 'projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1987_1989']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +149,9 @@
     "    # first using 'earthengine ls' command to get an median_result for later judgement\n",
     "    median_result = subprocess.run(    f'earthengine ls {item}',\n",
     "                                       shell = True,\n",
-    "                                       capture_output = True, \n",
-    "                                       text = True ).stdout.split('\\n')[2:-1]\n",
+    "                                       stdout=PIPE, \n",
+    "                                       stderr=PIPE,\n",
+    "                                       universal_newlines=True).stdout.split('\\n')[2:-1]\n",
     "        \n",
     "        # if the item is a object, put it into the all_data list directly.\n",
     "    if 'is not a folder' in median_result[0]:\n",
@@ -185,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +183,9 @@
     "    if isinstance(i,list):\n",
     "        all_objects.extend(i)\n",
     "    else:\n",
-    "        all_objects.append(i)"
+    "        all_objects.append(i)\n",
+    "\n",
+    "all_objects"
    ]
   },
   {
@@ -209,41 +197,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1987_1989_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1987_1989_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1990_1992_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1990_1992_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1993_1995_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1993_1995_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1996_1998_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1996_1998_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1999_2001_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_1999_2001_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2002_2004_Mean_EVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2002_2004_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2002_2004_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2005_2007_Mean_EVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2005_2007_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2005_2007_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2008_2010_Mean_EVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2008_2010_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2008_2010_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2011_2013_Mean_EVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2011_2013_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2011_2013_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2014_2016_Mean_EVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2014_2016_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2014_2016_Mean_NDVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2017_2019_Mean_EVI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2017_2019_Mean_NDBI to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wensomone666/Jinzhu/Mean_NDVI/Year_2017_2019_Mean_NDVI to public\n"
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1987_1989_harmonic_3 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1990_1992_harmonic_3 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1993_1995_harmonic_3 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1996_1998_harmonic_3 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_1999_2001_harmonic_3 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Fourier_img_harmonic_3/Fourier_img_2002_2004_harmonic_3 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Verified_point_2005_2007_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Verified_point_2008_2010_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Verified_point_2011_2013_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Verified_point_2014_2016_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Verified_point_2017_2019_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Zone_point_2005_2007_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Zone_point_2008_2010_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Zone_point_2011_2013_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Zone_point_2014_2016_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized/Zone_point_2017_2019_extract_Landsat_Fourier_Normalized_img to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Village_climate_zone_16_points/Village_climate_zone_16_points to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1987_1989/Zone_Sample to public\n"
      ]
     }
    ],
@@ -254,8 +232,9 @@
     "    \n",
     "    subprocess.run(f'earthengine acl set public {obj}',\n",
     "                               shell = True,\n",
-    "                               capture_output = True, \n",
-    "                               text = True )\n",
+    "                               stdout=PIPE, \n",
+    "                               stderr=PIPE,\n",
+    "                               universal_newlines=True)\n",
     "    # print out the process\n",
     "    print(f'Granting access {obj} to public')"
    ]
@@ -291,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
