Accuracy computation with Zone sample of diffrent percentage

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "def Step_1_Subset_Zone_sample(Zone_sample,percent):\n",
     "    Zone_sample_size = Zone_sample.size().getInfo()\n",
-    "    print('Zone sample size added is {Zone_sample_size}.')\n",
+    "    print(f'Zone sample size added is {Zone_sample_size}.')\n",
     "    return Zone_sample.randomColumn('x', 101).limit(int(Zone_sample_size * percent),'x')\n",
     "\n",
     "def Step_2_Create_Band_Combo(fe):\n",
@@ -3230,7 +3230,131 @@
       "2017_2019_Landsat_pct_001_tree_040 accuracy computation finished! ==>0018/2808\n",
       "2017_2019_Landsat_pct_001_tree_050 accuracy computation finished! ==>0019/2808\n",
       "2017_2019_Landsat_pct_001_tree_060 accuracy computation finished! ==>0020/2808\n",
-      "2017_2019_Landsat_pct_001_tree_070 accuracy computation finished! ==>0021/2808\n"
+      "2017_2019_Landsat_pct_001_tree_070 accuracy computation finished! ==>0021/2808\n",
+      "2017_2019_Landsat_pct_001_tree_080 accuracy computation finished! ==>0022/2808\n",
+      "2017_2019_Landsat_pct_001_tree_090 accuracy computation finished! ==>0023/2808\n",
+      "2017_2019_Landsat_pct_001_tree_100 accuracy computation finished! ==>0024/2808\n",
+      "2017_2019_Landsat_pct_001_tree_110 accuracy computation finished! ==>0025/2808\n",
+      "2017_2019_Landsat_pct_001_tree_120 accuracy computation finished! ==>0026/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_002_tree_001 accuracy computation finished! ==>0027/2808\n",
+      "2017_2019_Landsat_pct_002_tree_010 accuracy computation finished! ==>0028/2808\n",
+      "2017_2019_Landsat_pct_002_tree_020 accuracy computation finished! ==>0029/2808\n",
+      "2017_2019_Landsat_pct_002_tree_030 accuracy computation finished! ==>0030/2808\n",
+      "2017_2019_Landsat_pct_002_tree_040 accuracy computation finished! ==>0031/2808\n",
+      "2017_2019_Landsat_pct_002_tree_050 accuracy computation finished! ==>0032/2808\n",
+      "2017_2019_Landsat_pct_002_tree_060 accuracy computation finished! ==>0033/2808\n",
+      "2017_2019_Landsat_pct_002_tree_070 accuracy computation finished! ==>0034/2808\n",
+      "2017_2019_Landsat_pct_002_tree_080 accuracy computation finished! ==>0035/2808\n",
+      "2017_2019_Landsat_pct_002_tree_090 accuracy computation finished! ==>0036/2808\n",
+      "2017_2019_Landsat_pct_002_tree_100 accuracy computation finished! ==>0037/2808\n",
+      "2017_2019_Landsat_pct_002_tree_110 accuracy computation finished! ==>0038/2808\n",
+      "2017_2019_Landsat_pct_002_tree_120 accuracy computation finished! ==>0039/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_003_tree_001 accuracy computation finished! ==>0040/2808\n",
+      "2017_2019_Landsat_pct_003_tree_010 accuracy computation finished! ==>0041/2808\n",
+      "2017_2019_Landsat_pct_003_tree_020 accuracy computation finished! ==>0042/2808\n",
+      "2017_2019_Landsat_pct_003_tree_030 accuracy computation finished! ==>0043/2808\n",
+      "2017_2019_Landsat_pct_003_tree_040 accuracy computation finished! ==>0044/2808\n",
+      "2017_2019_Landsat_pct_003_tree_050 accuracy computation finished! ==>0045/2808\n",
+      "2017_2019_Landsat_pct_003_tree_060 accuracy computation finished! ==>0046/2808\n",
+      "2017_2019_Landsat_pct_003_tree_070 accuracy computation finished! ==>0047/2808\n",
+      "2017_2019_Landsat_pct_003_tree_080 accuracy computation finished! ==>0048/2808\n",
+      "2017_2019_Landsat_pct_003_tree_090 accuracy computation finished! ==>0049/2808\n",
+      "2017_2019_Landsat_pct_003_tree_100 accuracy computation finished! ==>0050/2808\n",
+      "2017_2019_Landsat_pct_003_tree_110 accuracy computation finished! ==>0051/2808\n",
+      "2017_2019_Landsat_pct_003_tree_120 accuracy computation finished! ==>0052/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_005_tree_001 accuracy computation finished! ==>0053/2808\n",
+      "2017_2019_Landsat_pct_005_tree_010 accuracy computation finished! ==>0054/2808\n",
+      "2017_2019_Landsat_pct_005_tree_020 accuracy computation finished! ==>0055/2808\n",
+      "2017_2019_Landsat_pct_005_tree_030 accuracy computation finished! ==>0056/2808\n",
+      "2017_2019_Landsat_pct_005_tree_040 accuracy computation finished! ==>0057/2808\n",
+      "2017_2019_Landsat_pct_005_tree_050 accuracy computation finished! ==>0058/2808\n",
+      "2017_2019_Landsat_pct_005_tree_060 accuracy computation finished! ==>0059/2808\n",
+      "2017_2019_Landsat_pct_005_tree_070 accuracy computation finished! ==>0060/2808\n",
+      "2017_2019_Landsat_pct_005_tree_080 accuracy computation finished! ==>0061/2808\n",
+      "2017_2019_Landsat_pct_005_tree_090 accuracy computation finished! ==>0062/2808\n",
+      "2017_2019_Landsat_pct_005_tree_100 accuracy computation finished! ==>0063/2808\n",
+      "2017_2019_Landsat_pct_005_tree_110 accuracy computation finished! ==>0064/2808\n",
+      "2017_2019_Landsat_pct_005_tree_120 accuracy computation finished! ==>0065/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_007_tree_001 accuracy computation finished! ==>0066/2808\n",
+      "2017_2019_Landsat_pct_007_tree_010 accuracy computation finished! ==>0067/2808\n",
+      "2017_2019_Landsat_pct_007_tree_020 accuracy computation finished! ==>0068/2808\n",
+      "2017_2019_Landsat_pct_007_tree_030 accuracy computation finished! ==>0069/2808\n",
+      "2017_2019_Landsat_pct_007_tree_040 accuracy computation finished! ==>0070/2808\n",
+      "2017_2019_Landsat_pct_007_tree_050 accuracy computation finished! ==>0071/2808\n",
+      "2017_2019_Landsat_pct_007_tree_060 accuracy computation finished! ==>0072/2808\n",
+      "2017_2019_Landsat_pct_007_tree_070 accuracy computation finished! ==>0073/2808\n",
+      "2017_2019_Landsat_pct_007_tree_080 accuracy computation finished! ==>0074/2808\n",
+      "2017_2019_Landsat_pct_007_tree_090 accuracy computation finished! ==>0075/2808\n",
+      "2017_2019_Landsat_pct_007_tree_100 accuracy computation finished! ==>0076/2808\n",
+      "2017_2019_Landsat_pct_007_tree_110 accuracy computation finished! ==>0077/2808\n",
+      "2017_2019_Landsat_pct_007_tree_120 accuracy computation finished! ==>0078/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_010_tree_001 accuracy computation finished! ==>0079/2808\n",
+      "2017_2019_Landsat_pct_010_tree_010 accuracy computation finished! ==>0080/2808\n",
+      "2017_2019_Landsat_pct_010_tree_020 accuracy computation finished! ==>0081/2808\n",
+      "2017_2019_Landsat_pct_010_tree_030 accuracy computation finished! ==>0082/2808\n",
+      "2017_2019_Landsat_pct_010_tree_040 accuracy computation finished! ==>0083/2808\n",
+      "2017_2019_Landsat_pct_010_tree_050 accuracy computation finished! ==>0084/2808\n",
+      "2017_2019_Landsat_pct_010_tree_060 accuracy computation finished! ==>0085/2808\n",
+      "2017_2019_Landsat_pct_010_tree_070 accuracy computation finished! ==>0086/2808\n",
+      "2017_2019_Landsat_pct_010_tree_080 accuracy computation finished! ==>0087/2808\n",
+      "2017_2019_Landsat_pct_010_tree_090 accuracy computation finished! ==>0088/2808\n",
+      "2017_2019_Landsat_pct_010_tree_100 accuracy computation finished! ==>0089/2808\n",
+      "2017_2019_Landsat_pct_010_tree_110 accuracy computation finished! ==>0090/2808\n",
+      "2017_2019_Landsat_pct_010_tree_120 accuracy computation finished! ==>0091/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_020_tree_001 accuracy computation finished! ==>0092/2808\n",
+      "2017_2019_Landsat_pct_020_tree_010 accuracy computation finished! ==>0093/2808\n",
+      "2017_2019_Landsat_pct_020_tree_020 accuracy computation finished! ==>0094/2808\n",
+      "2017_2019_Landsat_pct_020_tree_030 accuracy computation finished! ==>0095/2808\n",
+      "2017_2019_Landsat_pct_020_tree_040 accuracy computation finished! ==>0096/2808\n",
+      "2017_2019_Landsat_pct_020_tree_050 accuracy computation finished! ==>0097/2808\n",
+      "2017_2019_Landsat_pct_020_tree_060 accuracy computation finished! ==>0098/2808\n",
+      "2017_2019_Landsat_pct_020_tree_070 accuracy computation finished! ==>0099/2808\n",
+      "2017_2019_Landsat_pct_020_tree_080 accuracy computation finished! ==>0100/2808\n",
+      "2017_2019_Landsat_pct_020_tree_090 accuracy computation finished! ==>0101/2808\n",
+      "2017_2019_Landsat_pct_020_tree_100 accuracy computation finished! ==>0102/2808\n",
+      "2017_2019_Landsat_pct_020_tree_110 accuracy computation finished! ==>0103/2808\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017_2019_Landsat_pct_020_tree_120 accuracy computation finished! ==>0104/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_030_tree_001 accuracy computation finished! ==>0105/2808\n",
+      "2017_2019_Landsat_pct_030_tree_010 accuracy computation finished! ==>0106/2808\n",
+      "2017_2019_Landsat_pct_030_tree_020 accuracy computation finished! ==>0107/2808\n",
+      "2017_2019_Landsat_pct_030_tree_030 accuracy computation finished! ==>0108/2808\n",
+      "2017_2019_Landsat_pct_030_tree_040 accuracy computation finished! ==>0109/2808\n",
+      "2017_2019_Landsat_pct_030_tree_050 accuracy computation finished! ==>0110/2808\n",
+      "2017_2019_Landsat_pct_030_tree_060 accuracy computation finished! ==>0111/2808\n",
+      "2017_2019_Landsat_pct_030_tree_070 accuracy computation finished! ==>0112/2808\n",
+      "2017_2019_Landsat_pct_030_tree_080 accuracy computation finished! ==>0113/2808\n",
+      "2017_2019_Landsat_pct_030_tree_090 accuracy computation finished! ==>0114/2808\n",
+      "2017_2019_Landsat_pct_030_tree_100 accuracy computation finished! ==>0115/2808\n",
+      "2017_2019_Landsat_pct_030_tree_110 accuracy computation finished! ==>0116/2808\n",
+      "2017_2019_Landsat_pct_030_tree_120 accuracy computation finished! ==>0117/2808\n",
+      "_________________\n",
+      "2017_2019_Landsat_pct_050_tree_001 accuracy computation finished! ==>0118/2808\n",
+      "2017_2019_Landsat_pct_050_tree_010 accuracy computation finished! ==>0119/2808\n",
+      "2017_2019_Landsat_pct_050_tree_020 accuracy computation finished! ==>0120/2808\n",
+      "2017_2019_Landsat_pct_050_tree_030 accuracy computation finished! ==>0121/2808\n",
+      "2017_2019_Landsat_pct_050_tree_040 accuracy computation finished! ==>0122/2808\n",
+      "2017_2019_Landsat_pct_050_tree_050 accuracy computation finished! ==>0123/2808\n",
+      "2017_2019_Landsat_pct_050_tree_060 accuracy computation finished! ==>0124/2808\n",
+      "2017_2019_Landsat_pct_050_tree_070 accuracy computation finished! ==>0125/2808\n",
+      "2017_2019_Landsat_pct_050_tree_080 accuracy computation finished! ==>0126/2808\n",
+      "2017_2019_Landsat_pct_050_tree_090 accuracy computation finished! ==>0127/2808\n",
+      "2017_2019_Landsat_pct_050_tree_100 accuracy computation finished! ==>0128/2808\n",
+      "2017_2019_Landsat_pct_050_tree_110 accuracy computation finished! ==>0129/2808\n",
+      "2017_2019_Landsat_pct_050_tree_120 accuracy computation finished! ==>0130/2808\n",
+      "_________________\n"
      ]
     }
    ],
