--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# define the num which represent the true number of verified sample-point sets\n",
-    "num = 5\n",
+    "num = 10\n",
     "\n",
     "\n",
     "# define the year range\n",
@@ -85,7 +85,16 @@
     {
      "data": {
       "text/plain": [
-       "['2005_2007', '2008_2010', '2011_2013', '2014_2016', '2017_2019']"
+       "['1990_1992',\n",
+       " '1993_1995',\n",
+       " '1996_1998',\n",
+       " '1999_2001',\n",
+       " '2002_2004',\n",
+       " '2005_2007',\n",
+       " '2008_2010',\n",
+       " '2011_2013',\n",
+       " '2014_2016',\n",
+       " '2017_2019']"
       ]
      },
      "execution_count": 5,
@@ -106,15 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import verified points\n",
-    "Verified_Point = [ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year}\")\n",
-    "                              for year in year_name ]\n",
+    "# Verified_Point = [ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year}\")\n",
+    "#                               for year in year_name ]\n",
     "\n",
-    "Zone_sample    = ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1987_1989/Zone_Sample\")\n",
+    "# Zone_sample    = ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1987_1989/Zone_Sample\")\n",
+    "\n",
+    "Verified_village = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Village_Point_visual_checked_1990_1992\")\n",
     "\n",
     "# import north_china_plain boundary\n",
     "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
@@ -211,7 +222,7 @@
    ],
    "source": [
     "# define the gee-asset path for exporting\n",
-    "path = 'users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1987_1989'\n",
+    "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
     "\n",
     "\n",
     "for year,img,sample in list(zip(year_name,Stack_img,Verified_Point))[::-1]:\n",
@@ -262,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
