Export classfication img

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Class_4_Create_Sample_Classification_instancs.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Class_4_Create_Sample_Classification_instancs.ipynb
@@ -39,21 +39,22 @@
     "    function_1--> Reduce an input FeatureCollection with a given percentage\n",
     "    \n",
     "    function_2--> Create a list of tuples from input FeatureCollection,\n",
-    "                  Note: the input FeatureCollection must have Landsat/Fourier/Mean-normalized band values\n",
-    "                  The ruturn is like:\n",
-    "                                      [ ('Landsat',<FeatureCollection with {Landsat} values>)\n",
-    "                                        ('Fourier',<FeatureCollection with {Fourier} values>)\n",
-    "                                        ('Landsat_Fourier',<FeatureCollection with {Landsat and Fourier} values>)\n",
-    "                                        ('Landsat_Mean',<FeatureCollection with {Landsat and Mean_nomalized} values>)\n",
-    "                                        ('Fourier_Mean',<FeatureCollection with {Fourier and Mean_nomalized} values>)\n",
-    "                                        ('Landsat_Fourier_Mean',<FeatureCollection with {Landsat_Fourier_Mean} values>)]\n",
+    "      Note: the input FeatureCollection must have Landsat/Fourier/Mean-normalized band values\n",
+    "      The ruturn is like:\n",
+    "      [ ('Landsat',<FeatureCollection with {Landsat} values>)\n",
+    "        ('Fourier',<FeatureCollection with {Fourier} values>)\n",
+    "        ('Landsat_Fourier',<FeatureCollection with {Landsat and Fourier} values>)\n",
+    "        ('Landsat_Mean',<FeatureCollection with {Landsat and Mean_nomalized} values>)\n",
+    "        ('Fourier_Mean',<FeatureCollection with {Fourier and Mean_nomalized} values>)\n",
+    "        ('Landsat_Fourier_Mean',<FeatureCollection with {Landsat_Fourier_Mean} values>)]\n",
     "                                        \n",
     "    function_3--> Create sample_classificaiton instances (aka, classified sample point) without computation in GEE\n",
-    "                  Note: need to from Class_2_Classify_Fourier_Img import Classification first to use this funcion\n",
-    "                  In this function, 1) the input {verified_pt} will be split into a 7/3 partition, the\n",
-    "                                    2) create a classifier (hidden in the Classificaiton class) from the 7 portion, and\n",
-    "                                    3) use the classsifier to classify the left 3 portion of sample points and ,\n",
-    "                                    4) return the classified sample with multiindex of (year,combo_name,percent,tree)\n",
+    "      Note: need to from Class_2_Classify_Fourier_Img import Classification first to use this funcion\n",
+    "      In this function,:\n",
+    "      1) the input {verified_pt} will be split into a 7/3 partition, the\n",
+    "      2) create a classifier (hidden in the Classificaiton class) from the 7 portion, and\n",
+    "      3) use the classsifier to classify the left 3 portion of sample points and ,\n",
+    "      4) return the classified sample with multiindex of (year,combo_name,percent,tree)\n",
     "                                    \n",
     "    ___________________________________________Sample of Make_Sample_Classification__________________________________________\n",
     "    # define variables for the Sample_classification clas\n",
@@ -65,24 +66,39 @@
     "    path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
     "\n",
     "    # instantiate the combo_instance dictionary\n",
-    "    Combo_instance = {}\n",
+    "    Combo_instance_with_village = {}\n",
     "\n",
     "    # Create sample_classification instances through [year] --> [Percent] --> [band_combination] --> [Tree]\n",
     "    for year in year_name:\n",
     "\n",
-    "        Verified_sample = ee.FeatureCollection(f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
-    "        Zone_sample     = ee.FeatureCollection(f'{path}/Zone_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
+    "        # import samples\n",
+    "        Verified_sample = ee.FeatureCollection(f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\\\n",
+    "                            .filterMetadata('Built', 'equals', 0)\n",
+    "        Village_sample  = ee.FeatureCollection(f'{path}/Village_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
     "\n",
-    "        for pct in percent_value:\n",
+    "        # make sure they are the same size.\n",
+    "        min_size = min(Verified_sample.size().getInfo(),Village_sample.size().getInfo())\n",
+    "        Verified_sample = Verified_sample.randomColumn('z', 101).limit(min_size,'z')\n",
+    "        Village_sample  = Village_sample.randomColumn('z', 101).limit(min_size,'z')\n",
     "\n",
-    "            Subset_zone_sample  = Make_Sample_Classification.Step_1_Subset_sample(Zone_sample,pct)\n",
+    "        for pct in percent_reduction:\n",
+    "\n",
+    "            # Create percentage_reduced samples, only use non-built points from verified points\n",
+    "            Subset_verified_sample  = Make_Sample_Classification.Step_1_Subset_sample(Verified_sample,pct)\n",
+    "            Subset_village_sample   = Make_Sample_Classification.Step_1_Subset_sample(Village_sample,pct)\n",
+    "\n",
     "            # Merge Verified_points with Zone_points\n",
-    "            Verified_merge_Zone = Subset_zone_sample.merge(Verified_sample)\n",
-    "            Band_combo          = Make_Sample_Classification.Step_2_Create_Band_Combo(Verified_merge_Zone)\n",
+    "            Sample_merge = Subset_verified_sample.merge(Subset_village_sample)\n",
+    "\n",
+    "            # Get the band_combo names\n",
+    "            Band_combo   = Make_Sample_Classification.Step_2_Create_Band_Combo(Sample_merge)\n",
     "\n",
     "            for combo in Band_combo:\n",
-    "                Accuracy_instance = Make_Sample_Classification.Step_3_Create_Classification_Instance(year,Verified_merge_Zone,combo,tree_num,pct) \n",
-    "                Combo_instance.update(Accuracy_instance)\n",
+    "                Accuracy_instance = Make_Sample_Classification.\\\n",
+    "                                    Step_3_Create_Classification_Instance(year,Sample_merge,\n",
+    "                                                                          combo,tree_num,\n",
+    "                                                                          pct,classificaiton_func = Classification ) \n",
+    "                Combo_instance_with_village.update(Accuracy_instance)\n",
     "    \n",
     "    '''\n",
     "    \n",
