--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
@@ -85,10 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "combination_name = ['Landsat',\n",
+    "                    'Fourier',\n",
+    "                    'Landsat_Fourier',\n",
+    "                    'Landsat_Mean',\n",
+    "                    'Fourier_Mean',\n",
+    "                    'Landsat_Fourier_Mean']\n",
+    "                                    "
+   ]
   },
   {
    "cell_type": "markdown",
