Extract img value to invarient points

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -79,6 +79,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -122,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,11 +199,11 @@
     "\n",
     "# Zone_sample    = ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1987_1989/Zone_Sample\")\n",
     "\n",
-    "Verified_village = [ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Village_Point_visual_checked_1990_1992\")]\\\n",
-    "                    * num\n",
+    "# Verified_village = [ee.FeatureCollection('''users/wangjinzhulala/North_China_Plain_Python/\n",
+    "#                                             Sample_Points/Village_Point_visual_checked_1990_1992''')] * num\n",
     "\n",
-    "# import north_china_plain boundary\n",
-    "North_China_Plain = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Boundary_shp/North_China_Plain_Boundary\")"
+    "Non_built_2017_2019 = [ee.FeatureCollection('''users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_2017_2019''')\\\n",
+    "                        .filterMetadata('Built','equals',0)] *  num"
    ]
   },
   {
@@ -199,23 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Village_point_2017_2019_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_2014_2016_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_2011_2013_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_2008_2010_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_2005_2007_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_2002_2004_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_1999_2001_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_1996_1998_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_1993_1995_extract_Landsat_Fourier_Normalized_img\n",
-      "Village_point_1990_1992_extract_Landsat_Fourier_Normalized_img\n"
+      "Point_2017_2019_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_2014_2016_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_2011_2013_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_2008_2010_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_2005_2007_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_2002_2004_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_1999_2001_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_1996_1998_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_1993_1995_extract_Landsat_Fourier_Normalized_img\n",
+      "Point_1990_1992_extract_Landsat_Fourier_Normalized_img\n"
      ]
     }
    ],
@@ -224,23 +240,23 @@
     "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
     "\n",
     "\n",
-    "for year,img,sample in list(zip(year_name,Stack_img,Verified_village))[::-1]:\n",
+    "for year,img,sample in list(zip(year_name,Stack_img,Non_built_2017_2019))[::-1]:\n",
     "    \n",
     "    \n",
-    "    Ext_village = img.sampleRegions(collection=sample, \n",
+    "    Ext_sample = img.sampleRegions(collection=sample, \n",
     "                                    properties=['Built'], \n",
     "                                    scale=30, \n",
     "                                    geometries=True)\n",
     "    \n",
     "    # exporting\n",
-    "    task_village = ee.batch.Export.table.toAsset(   collection  = Ext_village,\n",
-    "                                            description = f'Village_point_{year}_extract_Landsat_Fourier_Normalized_img',\n",
-    "                                            assetId     = f'{path}/Village_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
-    "    task_village.start()\n",
+    "    task = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
+    "                                            description = f'Invariant_non_built_{year}_extract_Landsat_Fourier_Normalized_img_2017_2019',\n",
+    "                                            assetId     = f'{path}/Invariant_non_built_{year}_extract_Landsat_Fourier_Normalized_img_2017_2019')\n",
+    "    task.start()\n",
     "\n",
     "    \n",
     "    # print out the process\n",
-    "    print(f'Village_point_{year}_extract_Landsat_Fourier_Normalized_img')"
+    "    print(f'Point_{year}_extract_Landsat_Fourier_Normalized_img')"
    ]
   },
   {
